--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "React and TypeScript example starter project",
-  "keywords": ["typescript", "react", "starter"],
+  "keywords": [
+    "typescript",
+    "react",
+    "starter"
+  ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "2.0.4",
+    "@chakra-ui/react": "1.8.6",
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@types/react-router-dom": "5.3.3",
+    "framer-motion": "6.2.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "6.2.2",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
@@ -20,5 +31,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
